// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`SliderInput > Render > renders invisible spacer suffix 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="flex items-center"
    >
      <input
        class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
        type="text"
        value="180"
      />
      <span
        class="w-2 text-xs text-foreground-500"
        style="visibility: hidden;"
      >
        °
      </span>
    </div>
  </div>
</div>
`;

exports[`SliderInput > Render > renders value and suffix 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="flex items-center"
    >
      <input
        class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
        type="text"
        value="180"
      />
      <span
        class="w-2 text-xs text-foreground-500"
      >
        °
      </span>
    </div>
  </div>
</div>
`;

exports[`SliderInput > Render > renders without suffix 1`] = `
<div>
  <div
    data-overlay-container="true"
  >
    <div
      class="flex items-center"
    >
      <input
        class="w-11 bg-white/10 text-right text-sm text-foreground-600 outline-none focus:ring-1 focus:ring-foreground-300 rounded px-0.5"
        type="text"
        value="180"
      />
    </div>
  </div>
</div>
`;
